--- a/app/views/courses/4/_teamwork.html.erb
+++ b/app/views/courses/4/_teamwork.html.erb
@@ -20,127 +20,114 @@
        <div class="text-center col-md-6"><%= image_tag("course_4/teamwork4.png",height:"330")%><br><br>与上海宝尊集团签约合作 </div>
        <div class="text-center col-md-6"><%= image_tag("course_4/teamwork5.png",height:"330")%><br><br>与上海协通集团签约合作</div>
      </div>
-</dl>
+  </dl>
 </div>
 
 <div class=" course-content-policy-div" style="display: none;">
   <dl>
-    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 学校对精品课程建设的政策支持与措施及其落实情况</p>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 校内实训设备</p>
     <div class="container-fluid">
-      <dd>精品课程建设是教育部“高等学校教学质量与教学改革工程”的重要组成部分，上海市教育委员会将精品课建设纳入上海市高等教育内涵建设“085”工程范畴，也是学校课程建设的重要内容。我院历来重视课程建设工作，采取多种措施促进和保证院重点课程建设工作，促进市级精品课程的形成。学院鼓励精品课程建设的具体政策措施如下：</dd>
-    </div>
+      <dd style="text-indent:2em"> 良好的实训条件是实现高等职业教育人才培养目标的重要保证。本课程按照教学认知规律，已形成了“软件仿真教学——硬件仿真教学——生产性实践教学”渐进衔接的实践教学组织体系。为之服务的校内实践条件不仅能充分满足课程教学需要，并能承担对外相关职业技能培训和鉴定，紧贴企业岗位对人才的需求。</dd>
+      <dt>（一）校内实训设备</dt>
+      <dd style="text-indent:2em">我院汽车实训基地是获国家和上海财政支持的高职教育汽车实训基地，获财政支持750万，加学院配套资730万（不包括基本建设），共计：1480万。其建筑总面积2700多平米，设备350多套（台），价值近1200万。</dd>
+      <dd style="text-indent:2em">在上海民办高校的积极支持下，又获财政支持2011年汽车电子技术重点专业建设项目（085工程）120万；2012年汽车专业群教改及建设项目65万； 2013年新能源汽车实训基地（085工程）教育部200万。2014年汽车专业群教改及建设项目40万。使新能源汽车实训基地建设规模创上海市一流水平。</dd>
+      <dd style="text-indent:2em">新能源汽车专业实训基地包括：整车部分、电池及管理部分、电机拖动及控制部分、全车电子控制部分、结构与拆装部分、维护与保养部分、性能检测与故障诊断部分、充电及加注部分、其它类型动力部分。</dd>
+      <dd style="text-indent:2em">2个汽车实训基地成为集教学、培训、科研等多功能为一体的实训基地，可以同时满足4-6个班级实训的需求，可以完全满足《新能源汽车使用与维修》课程教学的需要。
+      至今为止汽车实训基地已接纳近2400多名学生进入实训。</dd>
+      <div class="text-center col-md-6"><%= image_tag("course_4/teamwork6.png")%></div>
+       <div class="text-center col-md-6"><%= image_tag("course_4/teamwork7.png")%></div>
+    </div><br><br>
 
-    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 组织保障</p>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> （二）专业虚拟仿真实训室实现软件仿真实训教学</p>
     <div class="container-fluid">
-      <dd>学院专门成立了课程建设指导委员会，负责全院课程建设的规划制定、立项、评审等工作，加强对课程建设的领导工作，严格按照课程建设立项要求组织中期检查和结题评审，并在整个课程建设过程中实行院系两级监控。对于申报市级精品的课程，特别强调应符合高职高专人才培养的要求，通过"工学结合"，企业学校一起交流，共同开发。突出培养职业能力和职业素养，体现职业性、实践性和开放性要求。
+      <dd style="text-indent:2em">2003年以来，引进上海鹏达、上海景格、宇龙汽车仿真教学软件、北京运华汽车营销教学软件、超越汽车商务教学软件网络版和单机板，配备50台计算机，教师能在课堂进行远程实验、实训视频教学，学生在电脑上进行模拟仿真实训、角色扮演，三维动画使学生对较为抽象的知识点能更容易理解，弥补实训实践操作资源有限所产生的不足，提高学生理论及实践操作水平。
       </dd>
+      <dd style="text-indent:2em">“理实一体化”、“高度仿真生产”满足硬件仿真实训，教学课程团队现阶段正在进一步补充完善新能源汽车拆装与维修实训中心、在实训室里多布置一些桌椅和多媒体设备，使得实训室与教室合二为一，课堂教学教师和实训指导教师完全融合，真正实现“教、学、做”一体的“理实一体化”教学，实现理论教学和实践教学的完全融合。通过实训室改造，可以容纳100人同时进行新能源汽车的理实一体化教学。
+      </dd>
+      <dd style="text-indent:2em">在实训基地建设时，与名企合作，引入大众汽车集团公司培训体系，由企业提供技术和部分设备，融入企业文化，高度仿真企业维修服务生产流程，为企业培养具有企业特色的高技能人才提供硬件保障</dd>
     </div>
 
     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 经费保障</p>
     <div class="container-fluid">
-      <dd>（1）学院经过多年来的不断建设，自2005年以来已投入200余万元建成了计算机实验实训室、软件开发仿真实验室、购置了开发环境软件、用于教学的多媒体电子教室等相应的教学软件；同时，拨出相当经费用于教师的培训，尤其是近两年来，从教学理念、专业技能、校企结合、多媒体制作能力等各方面对教师进行了较全面的培训。
+      <dd style="text-indent:2em">（1）学院经过多年来的不断建设，自2005年以来已投入200余万元建成了计算机实验实训室、软件开发仿真实验室、购置了开发环境软件、用于教学的多媒体电子教室等相应的教学软件；同时，拨出相当经费用于教师的培训，尤其是近两年来，从教学理念、专业技能、校企结合、多媒体制作能力等各方面对教师进行了较全面的培训。
       </dd>
-      <dd>（2）除上述经费外，学院对精品课程建设所需的实践教学场地和设备，开发校内、外实训基地、课程网站等费用，每年在预算中另行拔出专款，以保证精品课程教学质量的提高，保证精品课程教学条件的完善，保证精品课程的维护与共享。</dd>
+      <dd style="text-indent:2em">（2）除上述经费外，学院对精品课程建设所需的实践教学场地和设备，开发校内、外实训基地、课程网站等费用，每年在预算中另行拔出专款，以保证精品课程教学质量的提高，保证精品课程教学条件的完善，保证精品课程的维护与共享。</dd>
     </div>
 
-    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 政策保障</p>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> ( 三）校内实训环境</p>
     <div class="container-fluid">
-      <dd>（1）课程建设有据可依</dd>
-        <dd>我院将精品课程建设作为推进教学改革的核心工作，从制度上保证精品课程建设工作的顺利进行，学院已经出台《新侨职业技术学院关于批准20门重点课程建设的决定》、《新侨职业技术学院精品课程建设实施办法》等相关配套文件，对课程建设提供了政策上的保障。
-      </dd>
-      <dt>（2）项目负责人制</dt>
-        <dd>学院通过项目协议书的形式来明确课程建设负责人、课程所在系及学校三方各自的职责，确保课程建设保质保量按时完成。学院还采取“重点扶植、稳步推进，激励发展”的措施，在抓好学院重点课程的基础上，积极培育市级精品课程。
-      </dd>
+      <dd>1．校内实验实训室的设施设备技术含量高，在汽车营销实训中心建立了真实或仿真的职业环境；</dd>
+      <dd>2．实验实训项目达标率与开出率100%；</dd>
+      <dd>3．设备价值达标率80%以上；</dd>
+      <dd>4．设备完好率90%以上；</dd>
+      <dd>5．有便于学生自主学习的实验实训室管理制度，管理规范。</dd>
     </div>
 
-    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 师资保障</p>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> （四）校内生产企业成为教学与师资培养平台</p>
     <div class="container-fluid">
-      <dd>（1）优先引进</dd>
-        <dd>在师资队伍建设方面，优先和保证引进上海市精品课程和校级重点课程建设需要的"双师素质"教师，尤其是来自企业和行业一线的"双师素质"教师。
-        </dd>
-      <dt>（2）政策倾斜</dt>
-        <dd>学院在选拔教师进行职业培训时，参与课程建设的教师给予优先推荐。参与课程建设的教师，每年都有相关培训1-2次。学校对于承担精品课程的教师在津贴、职务晋升等方面给予政策倾斜。
-      </dd>
+      <dd style="text-indent:2em"> 设在校园内的大众汽车维修中心为课程的教学提供非常便利的环境。学生分组利用课余时间跟踪某辆故障车的检修，主讲教师和企业骨干师傅共同担当讲解任务，开展以企业真实生产任务为载体的技能训练。周末、节假日和寒暑假担任学徒工作，让学生在真正的生产环境中，体验车辆的检测维修过程，不仅消化了校内所学的发动机知识，同时在企业跟维修师傅学习汽车检测的实际工作经验。</dd>
     </div>
 
-      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 实践教学条件保障</p>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> （五）校内建设计划</p>
     <div class="container-fluid">
-      <dd>（1）现有条件满足</dd>
-        <dd>在实践教学环境建设方面，学院已拥有良好的设施，能保障课程实践教学和改革的顺利实施。
+      <dt>1．建立新能源汽车专业实训基地虚拟操作实训中心</dt>
+        <dd style="text-indent:2em">在日常的教学活动中进行嵌入实践教学和情景教学，使理论知识应用于实践探索，使学生在所创设的新型能源汽车中亲身操作，从而不断熟练和纠正自己在课堂上所学的新能源汽车知识，成为能将理论灵活运用实践的专门维修人才。
        </dd>
-      <dt>（（2）加大力度，更上一层楼
-      </dt>
-        <dd>学院将继续加大校内、外实训基地的建设，为课程的实践教学提供更加优良的条件。对今年申报上海市精品课程，学院将按有关政策给予进一步的扶持和鼓励，按一定比例配套经费，保证精品课程建设的顺利进行
+      <dt>2．2015年底前建设“多功能”教室</dt>
+        <dd style="text-indent:2em">在情境设计上需要改变学科内容导向的设计思路，加强“一体化”学习场所的建设，如集汽车动力系统的理论教学、小组工作、实验操作、实习技能之大成的“多功能”教室建设，可实施项目教学、案例教学、订单培养的“一体化”实验室建设，采用智能化媒体的具有高仿真度的“虚拟”实习场所的建设等。
         </dd>
-      <dt>（3）加强检查、督促精品课程的建设，保证质量</dt>
-      <dd>学院对已列为市级的精品课程，每个学期进行一次专门检查，着重检查是否按"建设规划"如期落实。并且，在校内组织推广、交流精品课程，总结精品课程经验，对他课程起到辐射、带动作用。同时，经常听取授课学生对精品课程的评价，督促其不断完善。</dd>
+        <dd class="text-center"><%= image_tag("course_4/teamwork8.png")%></dd>
     </div>
   </dl>
 </div>
 
 <div class=" course-content-policy-div" style="display: none;">
-  
-    
+  <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> （一）校外产学研实习基地特点</p> <br>
     <div class="container-fluid">
+      <dt>1．统筹规划，布点合理</dt>
+      <dd>为实行校企共同培养机制，我们学院所处的地理位置，选择中国最大的上海汽车集团大众有限公司、上海中科力帆电动汽车有限公司、上海中科深江电动车辆有限公司、上海绿地宏伟汽车销售服务有限公司、上海协通锦发汽车销售服务有限公司、上海汽车修理有限公司等25个单位，在汽车行业中具有一定影响力、一定规模效益的汽车检测、修理、销售企业作为本课程的紧密型校外实训基地，已经签订了合作协议和签订了“订单式”培养计划，产、学、研结合以满足课程教学需要的。另有10个松散型实训基地，提供短期、专项实习，满足了专业教学需要，如：上海中科力帆电动汽车有限公司、上海中科深江电动车辆有限公司就在嘉定叶城路，离我们学院不足3公里里程，是邻居关系，教师在教学中遇到纯电动汽车技术问题，中科力帆和深江的技术人员马上就会到场，便于新能源汽车的学习。</dd>
+      <dt>2．功能明确，满足课程的实践教学需要</dt>
+      <dd>在各个教学项目校内教学结束后，由主讲教师带领，分批到校外实训基地进行体验、教学。兼职实训指导教师组织相应教学项目的实践教学，在真实的工作环境下，增强学生的学习兴趣和学习效果，同时也让学生了解企业实际、体验企业文化，培养学生的职业素养，开拓视野，为学习今后的专业课程打下良好的基础。</dd>
+   <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> （二）校外产学研实习基地的建设</p> 
+   <dd>从2004年4月起，汽车工程系就开始着手建立校外实习实训基础，其主要目的是加强校企合作，让同学们亲临企业生产一线，直接参与生产，按照企业的考勤制度进行管理，感受企业的实际氛围，同时为就业做好准备，许多优秀的学生都被留下直接上岗。在2014年汽车工程系再次和多家大型汽车销售服务（集团）有限公司进行校企合作的签约。签约单位如下：</dd>
+   <dd>上海汽车集团大众有限公司、上海市汽车修理有限公司、上海市宝尊汽车有限公司、上海宝信汽车有限公司、上海中科力帆电动车有限公司、上海中科深江电动车辆有限公司和深圳市新能源汽车风向标集团等部分汽车营销服务公司特约维修站等25个企业与我校建立的专业实习基地。校企双方密切沟通与合作，企业技术人员加强对我校专业学生的指导和管理，有效地保证学生实践动手能力训练的要求，为学生实习和就业提供便利。</dd>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> （三）校外产学研实习基地的利用</p> 
+    <dd>1．2013年1月31日我院与上海汽车集团进行校企合作签约，将进行多方位校企合作，汽车工程系各专业进入迅速发展时期。</dd>
+    <dd>2．本专业已经与23家企业签订实习实训协议，建立符合《新能源汽车使用与维修》课程教学要求的校外实践教学基地。</dd>
+    <dd>3．本专业在2014年已经与相关企业建立深层次的工学结合合作教育机制，正在探索“订单式”培养模式，并在实习内容、考核管理等方面进行有效合作。</dd>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span>（四）建设计划</p> 
+    <dd>1．继续推进、实施、加强与上汽集团和其他汽车销售服务企业的校企合作，融合发展。做到融合行业办学；融合企业育人；融合生产教学研究。</dd>
+    <dd>2．2015年前本专业将与相关企业合作建立2-3个校外见习基地。</dd>
+    <dd>3．本课程用2年时间，建设以工作过程为引领，理实一体化任务驱动教学的信息化环境下校企协同教学平台，通过校企双方合作，实施六个“共建”，保障新能源汽车应用性复合性人才培养的有效实现。</dd>
       <div class="row text-center">
-        <div class="col-sm-3">
-          <%= image_tag("course_3/display1.png",width:"240", height:"350")%><br><br>
-        2014年上海市教学成果二等奖
-        </div>
-        <div class="col-sm-3">
-          <%= image_tag("course_3/display2.png",width:"240", height:"350")%><br><br>
-        2013年上海艺术设计展入围奖作品
-        </div>
-        <div class="col-sm-3">
-          <%= image_tag("course_3/display3.png",width:"240", height:"350")%><br><br>
-        第四届国际南洋珠首饰设计比赛银奖
-        </div>
-        <div class="col-sm-3">
-          <%= image_tag("course_3/display4.png",width:"240", height:"350")%><br><br>
-        2014年上海国际首饰设计大赛特殊工艺奖
-        </div>
-      </div>
+          <div class="col-sm-4">
+            <%= image_tag("course_4/teamwork9.png")%><br><br>
+          上海大众汽车集团
+          </div>
+          <div class="col-sm-4">
+            <%= image_tag("course_4/teamwork10.png")%><br><br>
+          上海宝尊马汽车服务有限公司
+          </div>
+          <div class="col-sm-4">
+            <%= image_tag("course_4/teamwork11.png")%><br><br>
+          上海中科力帆电动汽车有限公司
+          </div>
+      </div> <br><br>
       <div class="row text-center">
-        <div class="col-sm-6">
-          <%= image_tag("course_3/display5.png",width:"510", height:"350")%><br><br>
-          首届上海“灰领”职业大赛获奖作品<br><br>
+        <div class="col-md-6">
+          <%= image_tag("course_4/teamwork12.png")%><br><br>
+          深圳风向标新能源教学投资有限股份公司
         </div>
-        <div class="col-sm-6">
-          <%= image_tag("course_3/display6.png",width:"510", height:"350")%><br><br>
-          首届钻石首饰创意设计大赛三等奖<br><br>
+        <div class="col-md-6">
+          <%= image_tag("course_4/teamwork13.png")%><br><br>
+          上海幼狮高级轿车修理有限公司
         </div>
-      </div>
+      </div> <br><br>
+
       <div class="row text-center">
-        <div class="col-sm-3">
-          <%= image_tag("course_3/display7.png",width:"240", height:"350")%><br><br>
-        第九届梧州国际彩色宝石饰品<br>
-          设计大赛二等奖br><br>
-        </div>
-        <div class="col-sm-3">
-          <%= image_tag("course_3/display8.png",width:"240", height:"350")%><br><br>
-        金都杯第四届全国黄金首饰设计大赛<br>
-        镶嵌类一等奖作品br><br>
-        </div>
-        <div class="col-sm-3">
-          <%= image_tag("course_3/display9.png",width:"240", height:"350")%><br><br>
-        2011年上海旅游节“老凤祥杯”旅游<br>
-        纪念品设计大赛 二等奖（市级奖）<br><br>
-        </div>
-        <div class="col-sm-3">
-          <%= image_tag("course_3/display10.png",width:"240", height:"350")%><br><br>
-        2007年中国首饰设计制作电视大奖赛 <br>
-        首饰设计创意类 二等奖（国家奖）<br><br>
-        </div>
-      </div>
-      <div class="row text-center">
-        <div class="col-sm-3">
-          <%= image_tag("course_3/display11.png",width:"240", height:"350")%><br><br>
-          金都杯第四届全国黄金首饰设计大赛<br>
-          镶嵌类优秀奖作品<br><br>
-        </div>
-        <div class="col-sm-6">
-           <%= image_tag("course_3/display12.png",width:"510", height:"350")%><br><br>
-           2004年上海市“灰领”职业大赛一等奖、三等奖作品
+        <div class="col-12">
+          <%= image_tag("course_4/teamwork14.png")%> <br><br>
+          南京理工新能源师资培训联盟
         </div>
       </div>
     </div>
