--- a/app/views/courses/4/_combine.html.erb
+++ b/app/views/courses/4/_combine.html.erb
@@ -1,1 +1,126 @@
-combine
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-policy-nav"><strong>课程实践教学标准</strong></a>
+<a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>实训项目</strong></a><br><br>
+
+  
+<div class=" course-content-policy-div">
+  <dl>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 坚持课程实训教学目标服务于专业培养目标</p>
+    <div class="container-fluid">
+      <dd style="text-indent:2em">  按照“专业培养目标服务于新能源汽车人才市场需求，课程教学目标服务于专业培养目标”的原则，发挥课程在专门人才培养计划中的功能和作用，发挥课程对学生终身发展的价值，选择和确定课程实训教学内容的框架和体系。</dd>
+     </div>
+
+     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 坚持学生知识、能力、素质三位一体教学</p>
+    <div class="container-fluid">
+      <dd style="text-indent:2em">针对新能源汽车专业职业岗位（群）的需要，将课程实践教学的教学目睹标分解为知识目标、能力目标和实践性目标，将学习过程与学习方法、情感态度与价值观的培养纳入课程教学目标。把学生知识、能力、素质三位一体的原则落实到课程教学的始终</dd>
+     </div>
+
+     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 以情境领域为主线，突出学生综合能力素质培养</p>
+    <div class="container-fluid">
+      <dd style="text-indent:2em">  课程负责人对《新能源汽车使用与维修》课程进行整体设计，共设计七个工作任务，新能源汽车维修知识、新能源汽车检测仪器的使用、混合动力汽车使用与维修、纯电动汽车使用与维修、电机与控制系统的使用与维修、动力电池的使用与维修、插电桩的使用与维修。每个工作任务明确教学目标、学习情境、相关实践知识、工作任务单、岗位派工单、思考与练习。</dd>
+     </div>
+     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 校企双主体教学团队担任课程教学</p>
+    <div class="container-fluid">
+      <dd style="text-indent:2em">    担任《新能源汽车使用与维修》课程教师是“校企互动、专兼结合”的教学团队，课程教学团队在专业建设、校企双师双向交流运行机制、教学质量提高方面取得了明显的效果。</dd>
+     </div>
+     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 实训任务</p>
+    <div class="container-fluid">
+      <div class="text-center col-md-12"><%= image_tag("course_4/combine1.png")%></div>
+     </div>
+     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 工作任务单下达标准</p>
+    <div class="container-fluid">
+      <div class="text-center col-md-12"><%= image_tag("course_4/combine2.png")%></div>
+     </div>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 任务考核评价</p>
+    <div class="container-fluid">
+      <div class="text-center col-md-12"><%= image_tag("course_4/combine3.png")%></div>
+     </div>
+  </dl>
+</div>
+
+<div class=" course-content-policy-div" style="display: none;">
+  <dl>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 一.实训内容</p>
+    <div class="container-fluid">
+      <dd> 1.混合动力汽车的总体观察；</dd>
+      <dd>2.混合动力系统、混合动力控制系统、动力发动机控制系统的基本组成、结构与控制技术的研究。</dd>
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 二.实训目的与要求</p>
+      <dd>1.正确描述混合动力汽车的混合动力系统的基本组成、主要技术特性、各大部件的连接关系及动力传递路线;</dd>
+      <dd>2.正确描述 动力发动机汽油机及柴油机在结构和工作原理上的区别;</dd>
+      <dd>3.熟悉混合动力系统、混合动力控制系统、动力发动机控制系统的主要组成部件的名称、功用、安装部位及相互间的关系。</dd>
+    </div>
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 三.常用工具,仪器与设备</p>
+    <div class="container-fluid">
+      <dd> 1.丰田混合动力汽车一辆;</dd>
+      <dd>2.混合动力示教板及实验车;</dd>
+      <dd>3.常用工具。</dd>
+    </div>
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 四.注意事项</p>
+    <div class="container-fluid">
+      <dd>1.启动混合动力发动机时,应遵照操作规程,注意安全。</dd>
+      <dd>2.学生不得擅自启动动力发动机。</dd>
+      <dd>3.启动动力发动机前应先检查油、水、电的情况。</dd>
+    </div>
+    
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 五.方法与步骤</p>
+    <div class="container-fluid">
+      <dt>1、观察动力发动机的组成、结构特点并研究其工作过程</dt>
+      <dd>（1）利用动力发动机示教板、普锐斯轿车实物，观察、认识混合动力系统主要部件的名称、作用及所在位置、相互关系及构造特点，以了解混合动力各零部件的相互关系、运动规律和特点。</dd>
+      <dd>（2）对照实物，仔细观察，从结构和工作原理上，比较和区分混合动力发动机与汽油机和柴油机的异同。</dd>
+      <dd>（3）根据动力发动机，从气缸数量、排列方式、所用燃料及冷却方式等情况，认识动力发动机的类型及功率、缸径、压缩比、转速等主要技术数据。</dd>
+      <dd>（4）观察启动发动机后的运转情况。</dd>
+      <dd class="text-center"><%= image_tag("course_4/combine5.png")%></dd>
+      <dt>2、混合动力系统的组成及主要部件的作用</dt>
+      <dd>（1）发电机（MG1）<br>
+      发电机由发动机带动旋转产生高压电，为电动机（MG2）供电或为HV蓄电池。同时，它还可以作为起动机起动发动机。</dd>
+      <dd>（2）电动机（MG2）<br>
+      电动机（MG2）由来自发电机（MG1）或HV蓄电池的电能驱动，产生车辆行驶动力，以及制动期间或制动踏板未被踩下时产生电动为HV蓄电池再次充电（再生制动控制）。 </dd>
+      <dd>（3）HV蓄电池<br>
+      HV蓄电池在车辆起步、加速和上坡时，将制动踏板未被踩下时再次充入的电能提供给电动机（MG2）。</dd>
+      <dd>（4）蓄电池ECU <br>
+      蓄电池ECU监控HV蓄电池的充电状态。</dd>
+      <dd>（5）变频器总成<br>
+        变频器总成包括：增压转换器、DC/DC转换器和空调变频器。</dd>
+      <dd>1）增压转换器<br>
+      增压转换器将HV蓄电池的最高电压从DC201.6V增加到DC500V，或从DC500V降到DC201.6V。</dd>
+      <dd>2） DC/DC转换器<br>
+      将电压从DC201.6V降到12V，为电气设备供电，以及辅助蓄电池再次充电（DC12V）。</dd>
+      <dd>3）空调变频器<br>
+      将HV蓄电池的额定电压由DC201.6V转换为AC201.6V，为空调系统中电动变频压缩机供电。</dd>
+      <dd>（6）HV ECU <br>
+      HV ECU接收传感器及有关ECU（发动机ECU、蓄电池ECU、制动防滑控制ECU和动力转向ECU）的信息，计算所需的扭矩和输出功率，并将计算结果发送到变频器总成、发动机ECU、蓄电池ECU和制动防滑控制ECU。</dd>
+      <dd>（7）发动机ECU <br>
+      发动机ECU根据接收来自HV ECU 的目标发动机转速和所需的发动机动力，启动ETCS-i（智能电子节气门控制系统）。</dd>
+      <dd>（8）制动防滑控制ECU <br>
+      制动防滑控制ECU控制电动机（MG2）产生的再生制动以及控制液压制动。</dd>
+      <dd>（9）加速踏板位置传感器 <br>
+      加速踏板位置传感器将加速踏板角度转换为电信号输送到HV ECU。</dd>
+      <dd>（10）挡位传感器<br>
+      挡位传感器将挡位转换为电信号并输送到HV ECU。</dd>
+      <dd>（11）断路器传感器<br>
+      断路器传感器检测车辆发生磁撞时切断高压电路。</dd>
+      <dd>（12）SMR（系统主续电器）<br>
+      SMR（系统主续电器）用来自HV ECU的信号连续或断开蓄电池和变频器总成之间的高压电路。</dd>
+      <dd>（13）互锁开关<br>
+      互锁开关用于确认变频器盖和检修塞均已安装完毕。</dd>
+      <dd>（14）检修塞<br>
+      在检查或维修车辆时，拆下检修塞，关闭HV高压电路。</dd>
+      <dd class="text-center"><%= image_tag("course_4/combine4.png")%></dd>
+    </div>
+
+
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 六. 派工单</p>
+    <div class="container-fluid">
+      <dd class="text-center"><%= image_tag("course_4/combine6.png")%></dd>
+    </div>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 七．任务考核评分标准</p>
+    <div class="container-fluid">
+      <dd class="text-center"><%= image_tag("course_4/combine7.png")%></dd>
+    </div>
+    </dl>
+</div>
+
+ 
+
