--- a/app/views/courses/4/_teamwork.html.erb
+++ b/app/views/courses/4/_teamwork.html.erb
@@ -125,7 +125,7 @@
       </div> <br><br>
 
       <div class="row text-center">
-        <div class="col-12">
+        <div class="col-sm-12">
           <%= image_tag("course_4/teamwork14.png")%> <br><br>
           南京理工新能源师资培训联盟
         </div>
