--- a/app/views/courses/4/_course_effect.html.erb
+++ b/app/views/courses/4/_course_effect.html.erb
@@ -1,33 +1,33 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-policy-nav"><strong>社会认可度</strong></a>
-<a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>各界评价</strong></a>
-<a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>成果展示</strong></a><br><br>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-effect-nav"><strong>社会认可度</strong></a>
+<a href="javascript:void(0)" class="btn course-content-effect-nav"><strong>各界评价</strong></a>
+<a href="javascript:void(0)" class="btn course-content-effect-nav"><strong>成果展示</strong></a><br><br>
 
   
-<div class=" course-content-policy-div">
+<div class=" course-content-effect-div">
   <dl>
     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 校外专家评价</p>
     <div class="container-fluid">
     <dt>（1）上海市人力资源和社会保障局、上海汽车维修行业协会副主任 洪永楠 高级技师 上海吴安综合汽修中心 技术经理</dt>
       <dd style="text-indent:2em"> 我厂对接该专业学生的课程实习和毕业生综合实践训练的指导任务，为上海新侨技术学院汽车运用技术专业学生的实习基地。
     该专业学生遵守本单位的各项规章制度，工作积极肯干，努力学习有关知识，较好完成各项工作任务。实践技能掌握较好，知识应用能力较强，综合素质较高。
-    实习期间善于思考，能举一反三，能将在学校所学的知识灵活应用到具体的工作中去，保质保量完成工作，并能与公司同事和睦相处。这批学生动手能力较强,即有理论知识，又有一定的基本操作技能，还能虚心的向老师傅学习。能够正确掌握新能源汽车诊断检测仪等仪器仪表和设备；能诊断故障,进行数据流分析,排除故障,同时对汽车常见损伤能够熟练地进行认真的检测与维修，受到公司员工的赞许。学生在我公司“顶岗实习”期间 ，都受到一致的好评。</dd>
+    实习期间善于思考，能举一反三，能将在学校所学的知识灵活应用到具体的工作中去，保质保量完成工作，并能与公司同事和睦相处。这批学生动手能力较强,即有理论知识，又有一定的基本操作技能，还能虚心的向老师傅学习。能够正确掌握电动汽车诊断检测仪等仪器仪表和设备；能诊断故障,进行数据流分析,排除故障,同时对汽车常见损伤能够熟练地进行认真的检测与维修，受到公司员工的赞许。学生在我公司“顶岗实习”期间 ，都受到一致的好评。</dd>
      
      <dd style="text-indent:2em">我们希望对该课程的硬件加大投入,培养更多更好的技能全面、素质高的实用型人才。</dd>
      <dt>我们希望对该课程的硬件加大投入,培养更多更好的技能全面、素质高的实用型人才。</dt>
-     <dd>上海市工商职业技术学院汽车工程系与我单位一直保持长期合作关系，新能源汽车专业方向起步我们更是欢迎，历年学生在我处进行实习和就业，同，在我处进行汽车修理工的技能考证，高级修理工的技能 也涉及到学生们的汽车修理工技能考证强化，汽车维修高级工的技能考证通过率一直以来维持在85%左右。
-    该校汽车系新能源汽车专业方向的学生来我处培训汽车修理工技能考证培训、实习均有专业教师带队，教师和同学一起认真学习，早出晚归，谦虚好学，校企之间互相配合、深入探讨，学生的应知应会考试成绩很非常理想。汽车修理等级工的技能考证通过率能维持这么高与师生及我单位员工的努力紧密相连。</dd>
-    <dd style="text-indent:2em">我单位与汽车工程系专业骄傲之处在于一起研讨新能源汽车专业方向的《新能源汽车使用与维修》课程设置的内容以及实训的项目，使得最终的课程要求按照了行业标准，结合了岗位需求，注重学生职业素养的提升，强化学生的动手操作能力，使得学生成为一名能适应新能源汽车修理岗位高技能复合型人才。</dd>
+     <dd>上海市工商职业技术学院汽车工程系与我单位一直保持长期合作关系，电动汽车专业方向起步我们更是欢迎，历年学生在我处进行实习和就业，同，在我处进行汽车修理工的技能考证，高级修理工的技能 也涉及到学生们的汽车修理工技能考证强化，汽车维修高级工的技能考证通过率一直以来维持在85%左右。
+    该校汽车系电动汽车专业方向的学生来我处培训汽车修理工技能考证培训、实习均有专业教师带队，教师和同学一起认真学习，早出晚归，谦虚好学，校企之间互相配合、深入探讨，学生的应知应会考试成绩很非常理想。汽车修理等级工的技能考证通过率能维持这么高与师生及我单位员工的努力紧密相连。</dd>
+    <dd style="text-indent:2em">我单位与汽车工程系专业骄傲之处在于一起研讨电动汽车专业方向的《电动汽车结构与维修（理实一体）》课程设置的内容以及实训的项目，使得最终的课程要求按照了行业标准，结合了岗位需求，注重学生职业素养的提升，强化学生的动手操作能力，使得学生成为一名能适应电动汽车修理岗位高技能复合型人才。</dd>
   </dl>
 </div>
 
-<div class=" course-content-policy-div" style="display: none;">
+<div class=" course-content-effect-div" style="display: none;">
   <dl>
     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 同行专家评价</p>
     <div class="container-fluid">
     <dt>上海建桥学院陈志澜教授、机电学院院长 </dt>
 
-      <dd style="text-indent:2em"> 《新能源汽车使用与维修》精品课程选题准确，抓住了汽车大类专业普遍困扰
-      的瓶颈问题。从教学团队建设、教学以工作任务驱动模式的改革、与企业共同开发实践动手技能的新教材、探讨新能源汽车产业链带来的对人才需求等多方面入手，课程申报思路清晰、逻辑严密、论证科学，有较高的实用意义。</dd>
+      <dd style="text-indent:2em"> 《电动汽车结构与维修（理实一体）》精品课程选题准确，抓住了汽车大类专业普遍困扰
+      的瓶颈问题。从教学团队建设、教学以工作任务驱动模式的改革、与企业共同开发实践动手技能的新教材、探讨电动汽车产业链带来的对人才需求等多方面入手，课程申报思路清晰、逻辑严密、论证科学，有较高的实用意义。</dd>
       <dd style="text-indent:2em">在精品课程申报过程中，教学团队做了大量和有效的调研工作，取得了教学改革的第一手资料，对课程建设的思路：突出对学生职业能力的训练，理论知识的选取紧紧围绕真实工作任务完成的需要来进行，并融合相关职业资格证书对知识、技能和态度的要求。每个项目的学习都按以典型产品为载体设计的活动来进行，以真实工作任务为中心整合理论与实践，实现理论与实践的一体化。教学过程中，通过请企业专家授课和专任教师到企业学习的方法，充分开发学习资源，与企业形成了紧密结合办学模式，课程的建设也将推动专业整体建设的改革。</dd>
       <dd style="text-indent:2em">本人认为：该项目课题组的团队具有丰富的教学经验，人员结构合理，能胜任该精品课程的研究工作，其研究成果将会为上海市或国内其他高职同类专业学校起到借鉴及指导作用。</dd>
       <dd style="text-indent:2em">同意推荐该项目申报2015年的上海市精品课程。</dd>
@@ -36,7 +36,7 @@
     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 校外专家评价</p>
     <div class="container-fluid">
     <dt>上海幼狮高级轿车修理有限公司 高级技师/研究员级 高工（SAE国际认证）陶  巍 总经理</dt>
-      <dd style="text-indent:2em">上海工商职业技术学院《新能源汽车使用与维修》课程，包括了最新技术和新能源汽车的专业体系建设。而且已建有新能源汽车拆装维修实训基地，能配合本课程的实践和理论教学。该校还拥有一支双师配合的团队。他们的学科带头人和主要骨干教师都积极认证了OSTA全国汽车维修专项技师认证，已经达到了能胜任本精品课程教育要求。该学院本课程的建设，无论从场地，设备与师资队伍的建设，特别是新能源的教育项目得到了学院高度的重视，还获得了市政府专项资金的扶持。
+      <dd style="text-indent:2em">上海工商职业技术学院《电动汽车结构与维修（理实一体）》课程，包括了最新技术和电动汽车的专业体系建设。而且已建有电动汽车拆装维修实训基地，能配合本课程的实践和理论教学。该校还拥有一支双师配合的团队。他们的学科带头人和主要骨干教师都积极认证了OSTA全国汽车维修专项技师认证，已经达到了能胜任本精品课程教育要求。该学院本课程的建设，无论从场地，设备与师资队伍的建设，特别是电动的教育项目得到了学院高度的重视，还获得了市政府专项资金的扶持。
       总体评估认为该课程教学大纲符合本专业人才培养目标和培养规格要求，课程建设能满足专业发展需求，教学研究成果突出，课程教学特色明显。
       </dd>
       <dd style="text-indent:2em">任课教师精通业务，他们潜心钻研讲课技巧，合理进行教学方法和教学手段改革，提高教学质量。同时，还能针对性讲解大量实践案例，既加深了学生对基本知识的理解，也提高了学生对该课程学习的兴趣以及解决实际应用的能力，教学中教师注重与学生互动讨论，并且进行技能的实践训练，取得较好的教学效果。
@@ -47,29 +47,29 @@
     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 校内督导评价</p>
     <div class="container-fluid">
       <dt>学院教务处处长胡家秀教授的评价</dt>
-        <dd style="text-indent:2em">《新能源汽车使用与维修》课程为汽车专业群核心课程，其教学内容已从普通的汽车发动机构造与维修拓展到包括混合动力汽车、纯电动汽车等新能源汽车使用、拆装、维修与检修，属创新型的专业课程。从教学模式上充分发挥校内生产性实训基地作用。完全用基于项目任务的理实一体化教学，并有一支包括由企业专家转型的高水平专业教师，和聘任企业一线专家参与课程的设计与教学实施，对学生的评价方法也重在工作过程。该课程教学资源建设成果丰硕，又有汽车系与机电系的相关专业的强力支持，学生评价教学效果好!
+        <dd style="text-indent:2em">《电动汽车结构与维修（理实一体）》课程为汽车专业群核心课程，其教学内容已从普通的汽车发动机构造与维修拓展到包括混合动力汽车、纯电动汽车等电动汽车使用、拆装、维修与检修，属创新型的专业课程。从教学模式上充分发挥校内生产性实训基地作用。完全用基于项目任务的理实一体化教学，并有一支包括由企业专家转型的高水平专业教师，和聘任企业一线专家参与课程的设计与教学实施，对学生的评价方法也重在工作过程。该课程教学资源建设成果丰硕，又有汽车系与机电系的相关专业的强力支持，学生评价教学效果好!
         </dd>
         <dd style="text-indent:2em">（2）除上述经费外，学院对精品课程建设所需的实践教学场地和设备，开发校内、外实训基地、课程网站等费用，每年在预算中另行拔出专款，以保证精品课程教学质量的提高，保证精品课程教学条件的完善，保证精品课程的维护与共享。</dd>
       <dt>学院督导科研处处长 朱建六 副教授的评价</dt>
-      <dd style="text-indent:2em">《新能源汽车使用与维修》课程是汽车电子技术专业新能源汽车方向的核心课程。课程教学团队是一支在年龄、职称、双师等方面结构合理、专兼职结合，并具有较高综合素质的教学团队。为了适应新能源汽车发展对当前人才的需求，我们在全市高职院校中首先增设了新能源汽车专业方向。</dd>
-      <dd style="text-indent:2em">该专业的校内实训基地现有1500平方米左右，价值800多万元。为了加强新能源汽车方向的专业建设，2013年国家教育部和上海市教委特别拨款400万元为我院建设新能源汽车实训基地，使该基地成为教学、培训、科研相结合的理实一体化教学实训基地，也为《新能源汽车使用与维修》课程实现理实一体化教学提供了良好的条件。
-      该专业与上汽、中科力帆、新能源汽车风向标科技有限公司等企业紧密合作，学生的校外实习和实训有了很好的保障。在校企深度合作的基础上，企业积极参与教学，校企双方共同确定新能源汽车专业需要开设的课程，制定专业人才培养方案和课程教学大纲。通过和上汽等国内著名企业高度融合，校企双方共同编制的《新能源汽车使用与维护》以及《新能源汽车维修实训指导书》等教材，经过多年的实践和探索已日趋完善。</dd>
-      <dd style="text-indent:2em">课程教学团队不断深化教学改革，密切跟踪汽车新技术的发展和新能源汽车企业的实际需要，将企业真实的工作流程、工作方式结合课程的教学过程和教学任务。在近几年的上海市民办高校教师教学技能大赛和2015年上海市星光杯高职高专汽车职业技能大赛等各级各类竞赛中获得了较好的成绩。</dd>
-      <dd style="text-indent:2em">经过多年的教学和实践，《新能源汽车使用与维修》课程申报上海市精品课程的条件已基本具备，同意《新能源汽车使用与维修》课程申报市级精品课程。</dd>
+      <dd style="text-indent:2em">《电动汽车结构与维修（理实一体）》课程是汽车电子技术专业电动汽车方向的核心课程。课程教学团队是一支在年龄、职称、双师等方面结构合理、专兼职结合，并具有较高综合素质的教学团队。为了适应电动汽车发展对当前人才的需求，我们在全市高职院校中首先增设了电动汽车专业方向。</dd>
+      <dd style="text-indent:2em">该专业的校内实训基地现有1500平方米左右，价值800多万元。为了加强电动汽车方向的专业建设，2013年国家教育部和上海市教委特别拨款400万元为我院建设电动汽车实训基地，使该基地成为教学、培训、科研相结合的理实一体化教学实训基地，也为《电动汽车结构与维修（理实一体）》课程实现理实一体化教学提供了良好的条件。
+      该专业与上汽、中科力帆、电动汽车风向标科技有限公司等企业紧密合作，学生的校外实习和实训有了很好的保障。在校企深度合作的基础上，企业积极参与教学，校企双方共同确定电动汽车专业需要开设的课程，制定专业人才培养方案和课程教学大纲。通过和上汽等国内著名企业高度融合，校企双方共同编制的《电动汽车使用与维护》以及《电动汽车维修实训指导书》等教材，经过多年的实践和探索已日趋完善。</dd>
+      <dd style="text-indent:2em">课程教学团队不断深化教学改革，密切跟踪汽车新技术的发展和电动汽车企业的实际需要，将企业真实的工作流程、工作方式结合课程的教学过程和教学任务。在近几年的上海市民办高校教师教学技能大赛和2015年上海市星光杯高职高专汽车职业技能大赛等各级各类竞赛中获得了较好的成绩。</dd>
+      <dd style="text-indent:2em">经过多年的教学和实践，《电动汽车结构与维修（理实一体）》课程申报上海市精品课程的条件已基本具备，同意《电动汽车结构与维修（理实一体）》课程申报市级精品课程。</dd>
     </div>
 
     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 学生评价</p>
     <div class="container-fluid">
-    <dt>新能源汽车专业J131班</dt>
-      <dd>我们觉得通过上《新能源汽车使用与维修》课程使我们对新能源汽车的使用、结构与检修有了新的认识，使我们对于结构的理解不再是停留在本书中，而是通过理实一体化的教学让我们更为深刻的理解。在学习的过程中，老师们严格要求我们，用心将我们培养成一名具有较强的技能和素质能力的技术人才。在日常的教学活动中，老师们不仅有目的性、针对性的进行培养与传授知识，而是还注重培养我们的职业素质，让我们深深体会到作为一名合格的技术性人才所需的一切。</dd>
-      <dd>通过与老师们的接触感觉到，老师们不仅具备丰富扎实的专业知识，而且实践技能优秀，是称职的“双师型”教师。具备良好的师德，优秀的人格魅力。非常感谢老师们为了教导我们成为合格的技术人才所付出的努力与关怀，谢谢您好！方共同确定新能源汽车专业需要开设的课程，制定专业人才培养方案和课程教学大纲。通过和上汽等国内著名企业高度融合，校企双方共同编制的《新能源汽车使用与维护》以及《新能源汽车维修实训指导书》等教材，经过多年的实践和探索已日趋完善。</dd>
-      <dd>课程教学团队不断深化教学改革，密切跟踪汽车新技术的发展和新能源汽车企业的实际需要，将企业真实的工作流程、工作方式结合课程的教学过程和教学任务。在近几年的上海市民办高校教师教学技能大赛和2015年上海市星光杯高职高专汽车职业技能大赛等各级各类竞赛中获得了较好的成绩。</dd>
-      <dd>经过多年的教学和实践，《新能源汽车使用与维修》课程申报上海市精品课程的条件已基本具备，同意《新能源汽车使用与维修》课程申报市级精品课程。</dd>
+    <dt>电动汽车专业J131班</dt>
+      <dd>我们觉得通过上《电动汽车结构与维修（理实一体）》课程使我们对电动汽车的使用、结构与检修有了新的认识，使我们对于结构的理解不再是停留在本书中，而是通过理实一体化的教学让我们更为深刻的理解。在学习的过程中，老师们严格要求我们，用心将我们培养成一名具有较强的技能和素质能力的技术人才。在日常的教学活动中，老师们不仅有目的性、针对性的进行培养与传授知识，而是还注重培养我们的职业素质，让我们深深体会到作为一名合格的技术性人才所需的一切。</dd>
+      <dd>通过与老师们的接触感觉到，老师们不仅具备丰富扎实的专业知识，而且实践技能优秀，是称职的“双师型”教师。具备良好的师德，优秀的人格魅力。非常感谢老师们为了教导我们成为合格的技术人才所付出的努力与关怀，谢谢您好！方共同确定电动汽车专业需要开设的课程，制定专业人才培养方案和课程教学大纲。通过和上汽等国内著名企业高度融合，校企双方共同编制的《电动汽车使用与维护》以及《电动汽车维修实训指导书》等教材，经过多年的实践和探索已日趋完善。</dd>
+      <dd>课程教学团队不断深化教学改革，密切跟踪汽车新技术的发展和电动汽车企业的实际需要，将企业真实的工作流程、工作方式结合课程的教学过程和教学任务。在近几年的上海市民办高校教师教学技能大赛和2015年上海市星光杯高职高专汽车职业技能大赛等各级各类竞赛中获得了较好的成绩。</dd>
+      <dd>经过多年的教学和实践，《电动汽车结构与维修（理实一体）》课程申报上海市精品课程的条件已基本具备，同意《电动汽车结构与维修（理实一体）》课程申报市级精品课程。</dd>
     </div>
   </dl>
 </div>
 
-<div class=" course-content-policy-div" style="display: none;">
+<div class=" course-content-effect-div" style="display: none;">
   <div class="row text-center">
     <div class="col-sm-6">
       <%= image_tag("course_4/display1.png")%><br><br>
@@ -83,7 +83,7 @@
   <div class="row text-center">
     <div class="col-md-6">
       <%= image_tag("course_4/display3.png")%><br><br>
-      深圳风向标新能源教学投资有限股份公司
+      深圳风向标电动教学投资有限股份公司
     </div>
     <div class="col-md-6">
       <%= image_tag("course_4/display4.png")%><br><br>
@@ -94,7 +94,7 @@
   <div class="row text-center">
     <div class="col-sm-6">
       <%= image_tag("course_4/display5.png")%> <br><br>
-      南京理工新能源师资培训联盟
+      南京理工电动师资培训联盟
     </div>
     <div class="col-sm-6">
         <%= image_tag("course_4/display6.png")%><br><br>
@@ -105,7 +105,7 @@
   <div class="row text-center">
     <div class="col-sm-6">
       <%= image_tag("course_4/display7.png")%> <br><br>
-      南京理工新能源师资培训联盟
+      南京理工电动师资培训联盟
     </div>
     <div class="col-sm-6">
         <%= image_tag("course_4/display8.png")%><br><br>
@@ -115,7 +115,7 @@
   <div class="row text-center">
     <div class="col-sm-6">
       <%= image_tag("course_4/display9.png")%> <br><br>
-      南京理工新能源师资培训联盟
+      南京理工电动师资培训联盟
     </div>
     <div class="col-sm-6">
         <%= image_tag("course_4/display10.png")%><br><br>
