--- a/app/views/courses/4/_course_setup.html.erb
+++ b/app/views/courses/4/_course_setup.html.erb
@@ -1,11 +1,11 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-step-nav"><strong>课程设置</strong></a>
-<a href="javascript:void(0)" class="btn course-content-step-nav"><strong>课程性质与作用</strong></a>
-<a href="javascript:void(0)" class="btn course-content-step-nav"><strong>多种教学方法的运用</strong></a>
-<a href="javascript:void(0)" class="btn course-content-step-nav"><strong>网络教学资源和硬件环境</strong></a>
-<a href="javascript:void(0)" class="btn course-content-step-nav"><strong>教学模式的设计与创新</strong></a>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-condition-nav"><strong>课程设置</strong></a>
+<a href="javascript:void(0)" class="btn course-content-condition-nav"><strong>课程性质与作用</strong></a>
+<a href="javascript:void(0)" class="btn course-content-condition-nav"><strong>多种教学方法的运用</strong></a>
+<a href="javascript:void(0)" class="btn course-content-condition-nav"><strong>网络教学资源和硬件环境</strong></a>
+<a href="javascript:void(0)" class="btn course-content-condition-nav"><strong>教学模式的设计与创新</strong></a>
 <br><br>
 <!-- 课程设置 -->
-<div class="container-fluid course-content-step-div">
+<div class="container-fluid course-content-condition-div">
 	<dl>
 		<dt>一．课程设计理念</dt>
 		<dt>1.服务于电动汽车专业方向培养目标和定位</dt>
@@ -16,7 +16,7 @@
 		<dd style="text-indent:2em">教学过程中采用德国双元制教学模式。教师的双重身份既是教员又是师傅，学生的双重身份既是学员又是学徒工，教学场所的双重作用既是理论教学的课堂又是实践教学的工作岗位场所。以电动汽车企业维修工作岗位实际工作任务为载体设计教学活动的全过程，实现理实一体的教学，真枪实干，按工作岗位标准要求教师与学生。</dd>
 		<dd style="text-indent:2em">采用“学用一致，学工一体，培养学生的综合职业能力”理实一体的教学模式，在帮助学生理解理论知识的同时，让他们参与实践，获得感性认识，在积累实践经验的基础上提升理论积淀，加深对理论知识的理解。在实操中培养他们分析问题和解决问题的能力，学生通过学习获得与工作岗位所需一致的能力。课程设计选择源于实际的工作任务为载体，以学生为主体，按照汽车维修工作的实际过程展开，使工作过程转化为教师的教学过程，教学过程演化为学生的学习过程，学习过程就是汽车动力系统检测维修工作过程。
     教、学、做一体，理实一体的教学模式，为教师的理论知识和实践知识的结合创造发挥机遇，为学生的综合型应用技能人才的后续发展尊定基础。</dd>
-		<dd style="text-indent:2em">同时，我们加大对学生的实践与应用，建立了校内外实训基地，使学生的实践能力得到保证。通过实践训练、产学结合，使学生具备汽车电动汽车结构与维修（理实一体）能力、管理能力和职业素养，满足市场经济对电动汽车人才的基本要求，达到高等职业教育的要求。</dd>
+		<dd style="text-indent:2em">同时，我们加大对学生的实践与应用，建立了校内外实训基地，使学生的实践能力得到保证。通过实践训练、产学结合，使学生具备电动汽车结构与维修（理实一体）能力、管理能力和职业素养，满足市场经济对电动汽车人才的基本要求，达到高等职业教育的要求。</dd>
 		<dt>3. 《电动汽车结构与维修（理实一体）》课程评价方式</dt>
 		<dd style="text-indent:2em">课程考核评价方式，主要评价学生自主学习能力、实践操作掌握能力、企业工作岗位调查报告的写作能力。</dd>
 		<dd style="text-indent:2em">教学效果评价采取过程评价与结果评价相结合的方式，通过理论与实践相结合，重点评价学生的职业能力。</dd>
@@ -45,10 +45,10 @@
 	</dl>
 </div>
 <!-- 课程性质与作用 -->
-<div class="contrainer-fluid course-content-step-div" style="display: none;">
+<div class="container-fluid course-content-condition-div" style="display: none;">
 	<dl>
 		<dt>一．课程性质</dt>
-		<dd>电动汽车结构与维修（理实一体）》课程根据电动汽车后市场检测维修行业及车辆交通管理部门的需求，以培养新能源车辆检测维修岗位专业人员为根本目标的拓展创新专业课程，是高等职业技术院校电动汽车专业方向的一门专业核心课程。</dd>
+		<dd style="text-indent:2em">电动汽车结构与维修（理实一体）》课程根据电动汽车后市场检测维修行业及车辆交通管理部门的需求，以培养电动车辆检测维修岗位专业人员为根本目标的拓展创新专业课程，是高等职业技术院校电动汽车专业方向的一门专业核心课程。</dd>
 		<dd>本课程是学院精品课程。</dd>
 		<dt>二. 课程作用</dt>
 		<dd style="text-indent:2em">《电动汽车结构与维修（理实一体）》课程的开发是基于电动汽车专业面向新兴的电动汽车维护、修理、故障诊断等职业岗位工作过程，融通国家劳动保障部电动汽车维修职业标准而开发的创新拓展课程。因而课程具有如下显著作用：</dd>	
@@ -58,27 +58,27 @@
 		<dd>4．本课程的职业岗位指向明确，职业能力要求具体。</dd>
 		<dd>5．本课程目标能充分体现学生的工作能力、学习能力、应用能力、协作能力和创新能力的培养。  </dd>
 		<dt>三. 课程目标（课程定位）</dt>
-		<dd>课程的人才培养目标：通过学、练、做有机结合的课程教学实施，让学生学习与掌握电动汽车结构特点、工作机理、电动汽车安全使用及维修等相关专业知识，训练与掌握电动汽车安全使用、维修职业技能，养成汽车服务职业岗位必需的职业素养与团队合作精神，岗位所需的相关知识和技能，培养学生成为汽车行业迫切需要的高级应用性复合性电动汽车技术人才。</dd>
+		<dd style="text-indent:2em">课程的人才培养目标：通过学、练、做有机结合的课程教学实施，让学生学习与掌握电动汽车结构特点、工作机理、电动汽车安全使用及维修等相关专业知识，训练与掌握电动汽车安全使用、维修职业技能，养成汽车服务职业岗位必需的职业素养与团队合作精神，岗位所需的相关知识和技能，培养学生成为汽车行业迫切需要的高级应用性复合性电动汽车技术人才。</dd>
 		<dt>1．课程建设目标</dt>
-		<dd>体现选进性、综合性、开放性。以提高教学质量为核心，改革教学模式、教学
+		<dd style="text-indent:2em">体现选进性、综合性、开放性。以提高教学质量为核心，改革教学模式、教学
 		内容、教学方法和教学手段。加强理论联系实际，着重培养学生实践技能的操作能力职业素养。力争经过1~2年的努力，通过信息化教学平台将教学资源库和课程网站建设成为乃至全国知名的学习网站之一。</dd>
 		<dt>2．课程教学改革具体目标  </dt>
-		<dd>根据电动汽车后市场检测维修行业及车辆、交通管理部门的需求，以培养电动汽车检测、维修岗位专业人员为根本目标。</dd>
+		<dd style="text-indent:2em">根据电动汽车后市场检测维修行业及车辆、交通管理部门的需求，以培养电动汽车检测、维修岗位专业人员为根本目标。</dd>
 		<dd>按照电动汽车维修企业工作岗位的要求，参照国家职业资格认证标准和相关专业技术人员职业水平考核，结合工学结合的人才培养模式，以提高学生的职业技术能力和职业素养为中心，坚持以学生为本的教育理念，改革课程结构和教学内容，制定以突出职业能力培养的课程标准，规范课程教学的基本要求。</dd>
-		<dd>以工学结合的专业核心课程群建设为出发点，构建《电动汽车结构与维修（理实一体）》课程教学平台，校企合作、工学结合，共建《电动汽车结构与维修（理实一体）》课程教学资源库。完成开发以电动汽车结构与维修（理实一体）的工作过程为引领，建立课程理实一体化教学体系。</dd>
-		<dd>与汽车维修行业、企业的专家、专业核心课程骨干教师合作开发的配套教学的教材、课件和软件，形成工学结合、实践为先、特色并具有示范作用的专业精品课程。
+		<dd style="text-indent:2em">以工学结合的专业核心课程群建设为出发点，构建《电动汽车结构与维修（理实一体）》课程教学平台，校企合作、工学结合，共建《电动汽车结构与维修（理实一体）》课程教学资源库。完成开发以电动汽车结构与维修（理实一体）的工作过程为引领，建立课程理实一体化教学体系。</dd>
+		<dd style="text-indent:2em">与汽车维修行业、企业的专家、专业核心课程骨干教师合作开发的配套教学的教材、课件和软件，形成工学结合、实践为先、特色并具有示范作用的专业精品课程。
 		与此同时，形成一个优秀精干的教学团队。</dd>
-		<dd>上述课程教学目标具有如下特色：课程目标与电动汽车专业方向培养目标之
+		<dd style="text-indent:2em">上述课程教学目标具有如下特色：课程目标与电动汽车专业方向培养目标之
 		间的衔接更加紧密，课程知识目标、技能目标和能力素质目标应具体明确，符合学院办学定位，符合高职高专学生学习基础的实际。<br>
 		课程的职业岗位指向明确，职业能力要求具体。</dd>
-		<dd> 课程目标能充分体现学生的工作能力、学习能力、应用能力、协作能力和创新能力的培养。<br>
+		<dd style="text-indent:2em"> 课程目标能充分体现学生的工作能力、学习能力、应用能力、协作能力和创新能力的培养。<br>
     本课程为考试课，计6学分。理实教学学时为96。</dd>
 	</dl>
 </div>
 
 
 <!-- 多种教学方法的运用 -->
-<div class="contrainer-fluid course-content-step-div" style="display: none;">
+<div class="container-fluid course-content-condition-div" style="display: none;">
 	<dl>
 		<dd style="text-indent:2em"> 在设计《电动汽车结构与维修（理实一体）》课程的教学方法时，我们突出“理论、实践一体化，教、学、做一体化”的运用，要求教师将理论课与实训课有机地结合在一起来组织教学。结合本课程的特点，注重学生的各方面能力的培养，我们采用一系列教学方法：</dd>
 		<dd>上课的形式采用行动导向法、任务教学法以及情景模拟法等。</dd>
@@ -115,12 +115,11 @@
 		<dt>3．集体教学与个别教学相结合。</dt>
 		<dd style="text-indent:2em">建立电动汽车兴趣小组，组织学生学习电动汽车专业技能，稳定学生专业思想，激发学习兴趣，培养学生热爱专业、勇于探索、敢于创新的能力。注重学生在真实工程环境中的实践锻炼，安排学生暑期到校外实践教学基地实习，到上海同济大学汽车科研所参观学习，鼓励学生到生产第一线去锻炼，在工作现场解决实际问题，锻炼了学生的适应能力、处理人际关系的能力。此外案例教学法，多媒体组合教学法等都很好地集实践性、针对性和综合性于一体，构建了一个师生共同参与、理论与实践结合的教学过程，效果良好。</dd>
 		<dt>4. 团队工作法。</dt>
-		<dd style="text-indent:2em">通过大家合作完成一项工作任务，在完成过程中都是靠所有组员一起合作完成，比如汽车动力系统的二级维护，在操作的过程中，学生在汽车动力系统维护的工作过程中往往需要互相协作配合。此时便要会合集体的力量，集思广义，才能顺利完成汽车动力系统维护的项目。这样不但可以提高学生的思考能力，同时可以培养学生的团结协作能力。
-理实一体的教学模式，让学生“学中做、做中学”教学才有生命力，专业招生才有希望，教学改革才有发展。</dd>
+		<dd style="text-indent:2em">通过大家合作完成一项工作任务，在完成过程中都是靠所有组员一起合作完成，比如汽车动力系统的二级维护，在操作的过程中，学生在汽车动力系统维护的工作过程中往往需要互相协作配合。此时便要会合集体的力量，集思广义，才能顺利完成汽车动力系统维护的项目。这样不但可以提高学生的思考能力，同时可以培养学生的团结协作能力。理实一体的教学模式，让学生“学中做、做中学”教学才有生命力，专业招生才有希望，教学改革才有发展。</dd>
 	</dl>	
 </div>
 <!-- 网络教学资源和硬件环境 -->
-<div class="contrainer-fluid course-content-step-div" style="display: none;">
+<div class="container-fluid course-content-condition-div" style="display: none;">
 	<dl>
 		<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span>（一）网络教学资源</p>
 		<dd class="text-center"><%= image_tag("course_4/setup6.png")%></dd>
@@ -135,7 +134,7 @@
 	</dl>
 </div>
 <!-- 教学模式的设计与创新 -->
-<div class="contrainer-fluid course-content-step-div" style="display: none;">
+<div class="container-fluid course-content-condition-div" style="display: none;">
 	<dl>
 		<p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 基于职业岗位典型工作任务和工作过程，开发课程</p>
 		<dd style="text-indent:2em">1．深入企业生产第一线，研究电动汽车检测维修工作过程及汽车电工电力维修工作过程的知识和能力要求，融入职业道德和先进企业文化，以企业工作任务为引领，完成了《电动汽车安全规范维修作业》、《混合动力汽车专用检测仪的使用》、《混合动力汽车工作模式试验》、《动力蓄电池组件检验》、《纯电动汽车实车检验》、《动力电机不解体检验》、《动力电池续航里程短的故障检修》、《充电桩的使用与维修》等10个核心技能项目的建设。设计了７个工作岗位核心任务、　55个学习情境和30个技能训练的任务实施、任务评价考核标准等内容。教学中全部采用电动汽车检测维修与汽车电工电力检修车间的真实案例素材，按照资讯→决策→制定计划→任务实施→知识→检查评估→评价反馈→ 任务小结→ 强化练习等构架知识能力体系。较好地培养了学生自主学习能力与职业能力。</dd>
