--- a/app/views/courses/4/_teacher_resource.html.erb
+++ b/app/views/courses/4/_teacher_resource.html.erb
@@ -43,7 +43,7 @@
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
    <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车对电池的要求-黄虎</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车对电池的要求-黄虎</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12"><strong>PPT课件</strong></li>
@@ -115,10 +115,10 @@
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习任务4纯电动汽车动力系统控制技术</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
-  <li class="col-sm-12"><strong>★博世公司职教年会新能源汽车研讨培训资源</strong></li>
+  <li class="col-sm-12"><strong>★博世公司职教年会电动汽车研讨培训资源</strong></li>
 
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车大讲堂</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车大讲堂</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12"><strong>★聚合物锂离子动力电池基础知识培训资源</strong></li>
@@ -208,7 +208,7 @@
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车电池</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
-  <li class="col-sm-12"><strong>★全国新能源汽车研讨培训资源</strong></li>
+  <li class="col-sm-12"><strong>★全国电动汽车研讨培训资源</strong></li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">麒麟EV创业谷”创新与思考—冯峰</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
@@ -278,11 +278,11 @@
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车产业发展与企业人才需求-汪先锋</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车产业发展与企业人才需求-汪先锋</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车产业现状及热点分析-张谦</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车产业现状及热点分析-张谦</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
   </li>
 
