--- a/app/views/courses/4/_combine.html.erb
+++ b/app/views/courses/4/_combine.html.erb
@@ -1,26 +1,26 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-policy-nav"><strong>课程实践教学标准</strong></a>
-<a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>实训项目</strong></a><br><br>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-method-nav"><strong>课程实践教学标准</strong></a>
+<a href="javascript:void(0)" class="btn course-content-method-nav"><strong>实训项目</strong></a><br><br>
 
   
-<div class=" course-content-policy-div">
+<div class=" course-content-method-div">
   <dl>
     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 坚持课程实训教学目标服务于专业培养目标</p>
     <div class="container-fluid">
-      <dd style="text-indent:2em">  按照“专业培养目标服务于新能源汽车人才市场需求，课程教学目标服务于专业培养目标”的原则，发挥课程在专门人才培养计划中的功能和作用，发挥课程对学生终身发展的价值，选择和确定课程实训教学内容的框架和体系。</dd>
+      <dd style="text-indent:2em">  按照“专业培养目标服务于电动汽车人才市场需求，课程教学目标服务于专业培养目标”的原则，发挥课程在专门人才培养计划中的功能和作用，发挥课程对学生终身发展的价值，选择和确定课程实训教学内容的框架和体系。</dd>
      </div>
 
      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 坚持学生知识、能力、素质三位一体教学</p>
     <div class="container-fluid">
-      <dd style="text-indent:2em">针对新能源汽车专业职业岗位（群）的需要，将课程实践教学的教学目睹标分解为知识目标、能力目标和实践性目标，将学习过程与学习方法、情感态度与价值观的培养纳入课程教学目标。把学生知识、能力、素质三位一体的原则落实到课程教学的始终</dd>
+      <dd style="text-indent:2em">针对电动汽车专业职业岗位（群）的需要，将课程实践教学的教学目睹标分解为知识目标、能力目标和实践性目标，将学习过程与学习方法、情感态度与价值观的培养纳入课程教学目标。把学生知识、能力、素质三位一体的原则落实到课程教学的始终</dd>
      </div>
 
      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 以情境领域为主线，突出学生综合能力素质培养</p>
     <div class="container-fluid">
-      <dd style="text-indent:2em">  课程负责人对《新能源汽车使用与维修》课程进行整体设计，共设计七个工作任务，新能源汽车维修知识、新能源汽车检测仪器的使用、混合动力汽车使用与维修、纯电动汽车使用与维修、电机与控制系统的使用与维修、动力电池的使用与维修、插电桩的使用与维修。每个工作任务明确教学目标、学习情境、相关实践知识、工作任务单、岗位派工单、思考与练习。</dd>
+      <dd style="text-indent:2em">  课程负责人对《电动汽车结构与维修（理实一体）》课程进行整体设计，共设计七个工作任务，电动汽车维修知识、电动汽车检测仪器的使用、混合动力汽车使用与维修、纯电动汽车使用与维修、电机与控制系统的使用与维修、动力电池的使用与维修、插电桩的使用与维修。每个工作任务明确教学目标、学习情境、相关实践知识、工作任务单、岗位派工单、思考与练习。</dd>
      </div>
      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 校企双主体教学团队担任课程教学</p>
     <div class="container-fluid">
-      <dd style="text-indent:2em">    担任《新能源汽车使用与维修》课程教师是“校企互动、专兼结合”的教学团队，课程教学团队在专业建设、校企双师双向交流运行机制、教学质量提高方面取得了明显的效果。</dd>
+      <dd style="text-indent:2em">    担任《电动汽车结构与维修（理实一体）》课程教师是“校企互动、专兼结合”的教学团队，课程教学团队在专业建设、校企双师双向交流运行机制、教学质量提高方面取得了明显的效果。</dd>
      </div>
      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 实训任务</p>
     <div class="container-fluid">
@@ -37,7 +37,7 @@
   </dl>
 </div>
 
-<div class=" course-content-policy-div" style="display: none;">
+<div class=" course-content-method-div" style="display: none;">
   <dl>
     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 一.实训内容</p>
     <div class="container-fluid">
