--- a/app/views/courses/4/_platform.html.erb
+++ b/app/views/courses/4/_platform.html.erb
@@ -35,7 +35,7 @@
   </li>
   <li class="col-md-12"><strong>顶岗实习总结</strong></li>
    <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新能源汽车实习周记参考</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车实习周记参考</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-md-12"><strong>毕业综合训练报告</strong></li>
